Partials and layout set hbs.engine()

--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -15,6 +15,11 @@
 </head>
 
 <body>
+    {{#if admin}}
+        {{>admin-nav}}
+    {{else}}
+        {{>user-nav}}
+    {{/if}}
     {{{body}}}
 </body>
 
