--- a/views/admin/adminDashboard.hbs
+++ b/views/admin/adminDashboard.hbs
@@ -1,39 +1,71 @@
-<section class="h-100">
-  <div class="container h-100 py-5">
-    <div class="row d-flex justify-content-center align-items-center h-100">
-      <div class="col-10">
 
-        <div class="d-flex justify-content-between align-items-center mb-4">
-          <h3 class="fw-normal mb-0 text-black">Users List</h3>
-        </div>
+<!-- Page Content-->
+<div class="container-fluid p-0">
+    <!-- About-->
+    <section class="h-100">
+        <div class="container h-100 py-5">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-10">
 
-        <div class="card rounded-3 mb-4">
-          <div class="card-body p-4">
-            <div class="row d-flex justify-content-between align-items-center">
-             
-             <div class="col-md-2 col-lg-2 col-xl-2">
-                <img src="" class="img-fluid rounded-3" alt="Cotton T-shirt">
-              </div>
-              
-              <div class="col-md-3 col-lg-3 col-xl-3">
-                <p class="lead fw-normal mb-2">Name</p>
-                <p><span class="text-muted">Age :</span>M <span class="text-muted"><br> Place: </span>Grey</p>
-              </div>
+                    <div class="d-flex justify-content-between align-items-center mb-4">
+                        <h3 class="fw-normal mb-0 text-black">Users List</h3>
+                    </div>
+                    {{#each data}}
+                    <div class="card rounded-3 mb-4">
+                        <div class="card-body p-4">
+                            <div class="row d-flex justify-content-between align-items-center">
 
-              <div class="col-md-3 col-lg-3 col-xl-3">
-                <p class="lead fw-normal mb-2">Job</p>
-                <p><span class="text-muted"></span>Description</p>
-              </div>
-            
-              <div class="col-md-1 col-lg-1 col-xl-1 text-end">
-                <a href="#!" class="text-danger"><i class="fas fa-trash fa-lg"></i></a>
-              </div>
+                                <div class="col-md-2 col-lg-2 col-xl-2">
+                                    <img src="" class="img-fluid rounded-3" alt="Cotton T-shirt">
+                                </div>
 
+                                <div class="col-md-3 col-lg-3 col-xl-3">
+                                    <p class="lead fw-normal mb-2">{{userData.name}}</p>
+                                    <p><span class="text-muted">Age :</span>{{userData.age}} <span class="text-muted"><br> Address:
+                                        </span>{{userData.address}}</p>
+                                </div>
+
+                                <div class="col-md-3 col-lg-3 col-xl-3">
+                                    <p class="lead fw-normal mb-2">Description</p>
+                                    <p><span class="text-muted"></span>{{userData.description}}</p>
+                                </div>
+
+                                <div class="col-md-1 col-lg-1 col-xl-1 text-end">
+                                    <a href="#!" class="text-danger"><i class="fa-light fa-user-pen"></i></a>
+                                </div>
+                                <div class="col-md-1 col-lg-1 col-xl-1 text-end">
+                                    <form action="/admin/dashboard/delete/{{_id}}" method="post" class="text-danger"><button type="submit"><i class="fas fa-trash fa-lg"></i></button></form>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    {{/each}}
+                </div>
             </div>
-          </div>
         </div>
+    </section>
+</div>
+<!-- Bootstrap core JS-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
-      </div>
-    </div>
-  </div>
-</section>
+
+<script>
+    $("#submit-form").submit((e) => {
+        e.preventDefault()
+        $.ajax({
+            url: "https://script.google.com/macros/s/AKfycbwGOw5_WP-4F9NWYUZZ4o2gjwkTFooyb7l--D4Y4GkA7FK5l2_1w6GQh7CX4gzfCnNR/exec",
+            data: $("#submit-form").serialize(),
+            method: "post",
+            success: function (response) {
+                alert("Form submitted successfully")
+                window.location.reload()
+                //window.location.href="https://google.com"
+            },
+            error: function (err) {
+                alert("Something Error")
+
+            }
+        })
+    })
+</script>
