--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -11,14 +11,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/cd8b1d0510.js" crossorigin="anonymous"></script>
+
     <title>Sign in</title>
 </head>
 
 <body>
     {{#if admin}}
-        {{>admin-nav}}
+    {{>admin-nav}}
     {{else}}
-        {{>user-nav}}
+    {{#if user}}
+    {{>user-nav}}
+    {{/if}}
     {{/if}}
     {{{body}}}
 </body>
