--- a/views/admin/adminNewUser.hbs
+++ b/views/admin/adminNewUser.hbs
@@ -9,11 +9,16 @@
                                 <div class="d-flex justify-content-between align-items-center mb-3">
                                         <h4 class="text-right">Profile Settings</h4>
                                 </div>
-                                <form action="/register/{{id}}" enctype="multipart/form-data" method="post">
+                                <form action="add" method="post" enctype="multipart/form-data">
                                         <div class="row mt-2">
                                                 <div class="col-md-6"><label class="labels">Name</label><input
                                                                 type="text" class="form-control"
-                                                                placeholder="first name" name="name"></div>
+                                                                placeholder="first name" name="name"
+                                                                ></div>
+                                                <div class="col-md-12"><label class="labels">Email ID</label><input
+                                                                type="email" class="form-control"
+                                                                placeholder="enter email id"
+                                                                name="email"></div>
                                                 <div class="col-md-6"><label class="labels">Age</label><input
                                                                 type="number" class="form-control" placeholder="Age"
                                                                 name="age"></div>
@@ -21,16 +26,19 @@
                                         <div class="row mt-3">
                                                 <div class="col-md-12"><label class="labels">Mobile Number</label><input
                                                                 type="number" class="form-control"
-                                                                placeholder="enter phone number" name="phnno"></div>
+                                                                placeholder="enter phone number"
+                                                                name="phnno"></div>
                                                 <div class="col-md-12"><label class="labels">Address
                                                         </label><input type="text" class="form-control"
-                                                                placeholder="enter address" name="address"></div>
+                                                                placeholder="enter address"
+                                                                name="address"></div>
                                                 <div class="col-md-12"><label class="labels">State</label><input
                                                                 type="text" class="form-control" placeholder="state"
                                                                 name="state"></div>
                                                 <div class="col-md-12"><label class="labels">Postcode</label><input
                                                                 type="text" class="form-control" placeholder="postcode"
-                                                                name="postcode"></div>
+                                                                name="postcode">
+                                                </div>
                                                 <div class="col-md-12"><label class="labels">Image</label><input
                                                                 type="file" value="upload" class="form-control"
                                                                 name="image"></div>
@@ -42,7 +50,6 @@
                                         <div class="mt-5 text-center"><button class="btn btn-primary profile-button"
                                                         type="submit">Save
                                                         Profile</button></div>
-                                        <a href="/login">Login?</a>
                                 </form>
                         </div>
                 </div>
