--- a/views/loginAndRegister/login.hbs
+++ b/views/loginAndRegister/login.hbs
@@ -1,11 +1,16 @@
 <link rel="stylesheet" href="css/style.css">
-
+<script defer src="js/login.js"></script>
 <div class="main">
     <p class="sign" align="center">Sign in</p>
     <form class="form1" action="/login" method="post">
-        <input class="un " type="text" align="center" placeholder="Email" name="email">
+        <input class="un " id="email" onkeyup="validateEmail()" type="text" align="center" placeholder="Email" name="email">
+        <span style="color: red;" id="email-error"></span>
         <input class="pass" type="password" align="center" placeholder="Password" name="password">
-        <button class="submit" type="submit">Submit</button>
+        <button class="submit" type="submit" onclick="return submitForm()">Submit</button>
+        <span style="color: red;" id="submit-error"></span>
+        {{#if valid}}
+        <span style="color: red;">Invalid</span>
+        {{/if}}
         <p class="forgot" align="center"><a href="#">Forgot Password?</p>
         <p class="forgot" align="center"><a href="/preregister">New User?</p>
     </form>
