--- a/views/partials/user-nav.hbs
+++ b/views/partials/user-nav.hbs
@@ -11,7 +11,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none">Aswin ES</span>
         <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2"
-                src="assets/img/aswin-e.s.webp" alt="..." /></span>
+                src="/img/{{id}}.png" alt="..." /></span>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
         aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span
@@ -20,7 +20,7 @@
         <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contactme">Contact Me</a></li>
-            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#">Logout!</a></li>
+            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/logout">Logout!</a></li>
         </ul>
     </div>
 </nav>
