--- a/views/partials/admin-nav.hbs
+++ b/views/partials/admin-nav.hbs
@@ -18,7 +18,7 @@
 
         <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/admin/dashboard">Dashboard</a></li>
-            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/logout">Logout!</a></li>
+            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/admin/logout">Logout!</a></li>
         </ul>
 
     </div>
