--- a/views/partials/user-nav.hbs
+++ b/views/partials/user-nav.hbs
@@ -9,7 +9,7 @@
 <!-- Navigation-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Aswin ES</span>
+        <span class="d-block d-lg-none">{{userData.userData.name}}</span>
         <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2"
                 src="/img/{{id}}.png" alt="..." /></span>
     </a>
@@ -20,7 +20,7 @@
         <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contactme">Contact Me</a></li>
-            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/logout">Logout!</a></li>
+            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/user/logout">Logout!</a></li>
         </ul>
     </div>
 </nav>
